--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,6 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -40,3 +39,34 @@
     -->
   </body>
 </html>
+
+<!--manifest json-->
+
+
+<!--<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />-->
+
+<!--{-->
+<!--"short_name": "React App",-->
+<!--"name": "Create React App Sample",-->
+<!--"icons": [-->
+<!--{-->
+<!--"src": "favicon.ico",-->
+<!--"sizes": "64x64 32x32 24x24 16x16",-->
+<!--"type": "image/x-icon"-->
+<!--},-->
+<!--{-->
+<!--"src": "logo192.png",-->
+<!--"type": "image/png",-->
+<!--"sizes": "192x192"-->
+<!--},-->
+<!--{-->
+<!--"src": "logo512.png",-->
+<!--"type": "image/png",-->
+<!--"sizes": "512x512"-->
+<!--}-->
+<!--],-->
+<!--"start_url": ".",-->
+<!--"display": "standalone",-->
+<!--"theme_color": "#000000",-->
+<!--"background_color": "#ffffff"-->
+<!--}-->
